Overscrow behavior on IOS fixed

--- a/src/app/components/GalleryWorks/Gallery.scss
+++ b/src/app/components/GalleryWorks/Gallery.scss
@@ -21,6 +21,7 @@
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   overflow-x: scroll;
+  overscroll-behavior: none;
   -webkit-overflow-scrolling: touch;
 }
 
