--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -10,6 +10,8 @@
   animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  -webkit-overflow-scrolling: touch;
+  overscroll-behavior: none;
 }
 
 @media only screen and (max-width: 900px) {
